--- a/course-02/exercises/udacity-c2-restapi/package.json
+++ b/course-02/exercises/udacity-c2-restapi/package.json
@@ -18,9 +18,10 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.2",
-    "aws-sdk": "^2.492.0",
+    "aws-sdk": "^2.1144.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^16.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
